# FAST

./: CMakeLists.txt  fast.cu  main.cpp
